--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -254,6 +254,8 @@
         "p_check":"性能照査",
         "safety_ratio":"安全率一覧表",
         "check":"照査",
+        "axis_maxmin":"軸力 最大最小",
+        "consider":"考慮する",
         "bend":"曲げ",
         "shear":"せん断",
         "twist":"ねじり",
