-Done add option "Consider"

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -255,7 +255,7 @@
         "safety_ratio":"Safety ratio list",
         "check":"Check",
         "axis_maxmin":"Axis force max/min",
-        "consider":"consider",
+        "consider":"Consider",
         "bend":"Bending",
         "shear":"Shear",
         "twist":"Twist",
