--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -62,6 +62,7 @@
         "safe_pv":"Safety (fatigue fracture) Permanent + variable",
         "safe_d":"Safety (destruction)",
         "r_ex":"Restorability (damage) Except during an earthquake",
+        "u_damage": "Usability (damage)",
         "r_at":"Restorability (damage) At the time of an earthquake",
         "min_rebar":"Minimum rebar amount",
         "u_stress":"Use limit For studying edge stress",
