--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -62,6 +62,7 @@
         "safe_pv":"安全性 （疲労破壊）永久＋変動",
         "safe_d":"安全性 （破壊）",
         "r_ex":"復旧性 （損傷）地震時以外",
+        "u_damage":"使用性（損傷）",
         "r_at":"復旧性 （損傷）地震時",
         "min_rebar":"最小鉄筋量",
         "u_stress":"使用限界 縁応力度検討用",
@@ -241,6 +242,7 @@
         "safe_d":"安全性 （破壊）",
         "r_ex":"復旧性 （損傷）地震時以外",
         "r_at":"復旧性 （損傷）地震時",
+        "u_damage":"使用性（損傷）",
         "min_rebar":"最小鉄筋量",
         "dont_use":"使用しない",
         "muddy_less":"泥水比重1.04以下",
