--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -478,5 +478,11 @@
     "window": {
         "closeTitle": "確認",
         "closeMessage": "変更内容が保存されません。本当に終了しますか？"
+    },
+    "action_key":{
+        "copy": "コピー",
+        "paste": "貼り付け",
+        "undo": "元に戻す",
+        "cut": "切り取り"
     }
 }
