--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -478,5 +478,11 @@
     "window": {
         "closeTitle": "Confirm",
         "closeMessage": "Changes may not to be saved. Are you sure you want to quit?"
+    },
+    "action_key":{
+        "copy": "Copy",
+        "paste": "Paste",
+        "undo": "Undo",
+        "cut": "Cut"
     }
 }
