--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -475,9 +475,15 @@
         "check_crack":"Check the crack data.",
         "changing_error":"It seems that the data in this.crack_list is changing."
     },
+    "modal": {
+        "close": "Close",
+        "cancel": "Cancel",
+        "ok": "OK"
+    },
     "window": {
         "closeTitle": "Confirm",
-        "closeMessage": "Changes may not to be saved. Are you sure you want to quit?"
+        "closeMessage": "Changes may not to be saved. Are you sure you want to quit?",
+        "confirm": "Information being entered is discarded."
     },
     "action_key":{
         "copy": "Copy",
