--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -483,7 +483,7 @@
     "window": {
         "closeTitle": "Confirm",
         "closeMessage": "Changes may not to be saved. Are you sure you want to quit?",
-        "confirm": "Information being entered is discarded."
+        "confirm": "Information being entered is discarded?"
     },
     "action_key":{
         "copy": "Copy",
