--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -477,7 +477,8 @@
     },
     "window": {
         "closeTitle": "確認",
-        "closeMessage": "変更内容が保存されません。本当に終了しますか？"
+        "closeMessage": "変更内容が保存されません。本当に終了しますか？",
+        "confirm": "入力中のデータは破棄されてしまいますがよろしいですか？"
     },
     "action_key":{
         "copy": "コピー",
