Add button Japanese

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -475,6 +475,11 @@
         "check_crack":"ひび割れデータを確認してください。",
         "changing_error":"this.crack_listのデータが変化しているエラーと思われます。"
     },
+    "modal": {
+        "close": "閉じる",
+        "cancel": "キャンセル",
+        "ok": "OK"
+    },
     "window": {
         "closeTitle": "確認",
         "closeMessage": "変更内容が保存されません。本当に終了しますか？",
