--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -9,7 +9,8 @@
         "logout":"ログアウト",
         "login":"ログイン",
         "fail":"ファイルを開くことに失敗しました, status:",
-        "open":"を開いてください！"
+        "open":"を開いてください！",
+        "NewWindow":"新しいウィンドウ"
     },
     "login-dialog":{
         "createAccount":"ユーザー登録がお済みでない方はこちらから",
