テストを残し完了

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -60,9 +60,9 @@
         "japan_civil":"土木学会",
         "d_stress":"耐久性 縁応力度検討用",
         "pl_d":"耐久性 （永久荷重）",
-        "safe_limit":"安全性 （疲労破壊）疲労限",
-        "safe_pa":"安全性 （疲労破壊）永久作用",
-        "safe_pv":"安全性 （疲労破壊）永久＋変動",
+        "safe_limit":"安全性（疲労破壊） 疲労限",
+        "safe_pa":"安全性（疲労破壊） 永久作用",
+        "safe_pv":"安全性（疲労破壊） 永久＋変動",
         "safe_d":"安全性 （破壊）",
         "r_ex":"復旧性 （損傷）地震時以外",
         "r_at":"復旧性 （損傷）地震時",
@@ -80,7 +80,9 @@
         "vl_u":"使用限界 （変動荷重）",
         "d_torsion_judge":"耐久性 ねじりひび割れ検討判定用",
         "jr_com":"ＪＲ各社",
+        "jr_standard":"鉄道標準",
         "jr_com5":"ＪＲ各社 令和5年設計標準",
+        "jr_stan5":"鉄道標準 令和5年設計標準",
         "trans":"運輸機構",
         "trans5":"運輸機構 令和5年設計標準",
         "jr_east":"ＪＲ東日本",
@@ -129,7 +131,7 @@
         "m_no":"部材\n番号",
         "position":"位置",
         "p_name":"算出点名",
-        "bh":"断面\nB\nH",
+        "bh":"断面BH",
         "haunch":"ハンチ高",
         "bending":"曲げ",
         "shear":"せん断",
@@ -190,7 +192,7 @@
         "m_len":"部材長さ(mm)"
     },
     "fatigues":{
-        "durable":"耐用年数：",
+        "durable":"耐用年数",
         "m_no":"部材\n番号",
         "position":"位置",
         "p_name":"算出点名",
