--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -80,7 +80,9 @@
         "vl_u":"Usage limit (variable load)",
         "d_torsion_judge":"Durability For examination and judgment of torsional cracks",
         "jr_com":"JR companies",
+        "jr_standard":"Japan Railways Standard",
         "jr_com5":"JR companies from 2023",
+        "jr_stan5":"Japan Railways Standard from 2023",
         "trans":"Transport Organization",
         "trans5":"Transport Organization from 2023",
         "jr_east":"JR East",
@@ -190,7 +192,7 @@
         "m_len":"Distance (mm)"
     },
     "fatigues":{
-        "durable":"Durable life：",
+        "durable":"Durable life",
         "m_no":"Member\nNo",
         "position":"Position",
         "p_name":"Calculated point name",
