--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -484,7 +484,7 @@
     "window": {
         "closeTitle": "確認",
         "closeMessage": "変更内容が保存されません。本当に終了しますか？",
-        "confirm": "入力中のデータは<br/>破棄されてしまいます<br/>よろしいですか？"
+        "confirm": "入力中のデータは破棄されてしまいますがよろしいですか？"
     },
     "action_key":{
         "copy": "コピー",
