断面形状に円環を追加、ヘルプをマニュアルに変更

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -96,6 +96,7 @@
         "t_shape":"T shape",
         "r_shape":"Round",
         "oval":"oval",
+        "circle":"Round/Circle",
         "m_no":"Member\nNo",
         "m_len":"Distance",
         "g_no":"Group No",
