--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -96,6 +96,7 @@
         "t_shape":"T形",
         "r_shape":"円形",
         "oval":"小判",
+        "circle":"円形・円環",
         "m_no":"部材\n番号",
         "m_len":"部材長",
         "g_no":"グループNo",
