ヘルプを操作マニュアルへ文言変更

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,7 +8,7 @@
         "overwrite":"Overwrite save",
         "openPick":"Open the pickup file",
         "language": "Language",
-        "help": "Help",
+        "help": "Manual",
         "control": "Control",
         "logout":"Logout",
         "login":"Login",
