--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -8,7 +8,7 @@
         "overwrite":"上書き保存",
         "openPick":"ピックアップファイルを開く",
         "language": "言語",
-        "help": "ヘルプ",
+        "help": "操作マニュアル",
         "control": "仕様・条件",
         "logout":"ログアウト",
         "login":"ログイン",
