かぶり1断目をかぶり1段目に修正

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -142,7 +142,7 @@
         "rebar_ax":"軸方向鉄筋",
         "dia":"鉄筋径",
         "number":"本数",
-        "cover":"かぶり\n1断目",
+        "cover":"かぶり\n1段目",
         "lines":"ならび\n本数",
         "space":"アキ",
         "ss":"間隔",
