--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -91,6 +91,7 @@
         "jr_east":"ＪＲ東日本",
         "limit100":"ひび割れ幅制限値に用いるかぶりは 100mm を上限とする",
         "apex":"円形断面で鉄筋を頂点に１本配置する",
+        "adopt":"円形断面のせん断耐力が小さくなるような鉄筋配置を採用",
         "Mud":"せん断耐力におけるβn算定時の Mud は軸力を考慮しない"
     },
     "members" :{
