add router material module

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -213,6 +213,9 @@
         "hoop":"Hoop",
         "fold":"folding"
     },
+    "material-strength-verifiaction-condition":{
+        
+    },
     "safety-factors-material-strengths":{
         "rsb_con":"Reinforcing bar / Concrete",
         "safe":"Stability factor",
