--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -220,7 +220,9 @@
         "fold":"folding"
     },
     "material-strength-verifiaction-condition":{
-        
+        "com_type":"Component Type",
+        "other_con":"Other conditions",
+        "base_stan":"Base Standard"
     },
     "safety-factors-material-strengths":{
         "rsb_con":"Reinforcing bar / Concrete",
