--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -76,8 +76,8 @@
         "min_rebar":"最小鉄筋量",
         "u_stress":"使用限界 縁応力度検討用",
         "pl_u":"使用限界 （永久荷重）",
-        "pl_f":"疲労限界　永久荷重",
-        "f_pv":"疲労限界　永久＋変動",
+        "pl_f":"疲労限界 永久荷重",
+        "f_pv":"疲労限界 永久＋変動",
         "ul":"終局限界",
         "us_earth":"地震時 使用限界",
         "ul_earth":"地震時 終局限界",
@@ -99,6 +99,33 @@
         "limit_design_method":"限界設計法",
         "partial_coefficient_method":"部分係数法",
         "allowable_stress_method":"許容応力度法"
+    },
+    "basic-information-road":{
+        "bs_dcp_of_is": "耐久性 内部鋼材の防食[1]",
+        "bs_durability_fatigue": "耐久性 コンクリート部材の疲労[13]",
+        "bs_lcc1": "耐荷性能 限界状態1, 3(永続作用)[1]",
+        "bs_lcc2_8": "耐荷性能 限界状態1, 3(変動作用)[2~8]",
+        "bs_lcc9": "耐荷性能 限界状態1, 3(変動作用)[9]",
+        "bs_lcc10": "耐荷性能 限界状態1, 3(変動作用)[10]",
+        "bs_lcc11": "耐荷性能 限界状態1, 3(偶発作用)[11]",
+        "bs_lcc12": "耐荷性能 限界状態1, 3(偶発作用)[12]",
+        "bs_min_rebar_amount": "最小鉄筋量[1~10]",
+        "sfv_dcp_of_is": "耐久性 内部鋼材の防食[1]",
+        "sfv_durability_fatigue": "耐久性 コンクリート部材の疲労[13]",
+        "sfv_lcc1": "耐荷性能 限界状態3(永続作用)[1]",
+        "sfv_lcc2_8": "耐荷性能 限界状態3(変動作用)[2~8]",
+        "sfv_lcc9": "耐荷性能 限界状態3(変動作用)[9]",
+        "sfv_lcc10": "耐荷性能 限界状態3(変動作用)[10]",
+        "sfv_lcc11": "耐荷性能 限界状態3(偶発作用)[11]",
+        "sfv_lcc12": "耐荷性能 限界状態3(偶発作用)[12]",
+        "tv_dcp_of_is": "耐久性 内部鋼材の防食[1]",
+        "tv_durability_fatigue": "耐久性 コンクリート部材の疲労[13]",
+        "tv_lcc1": "耐荷性能 限界状態3(永続作用)[1]",
+        "tv_lcc2_8": "耐荷性能 限界状態3(変動作用)[2~8]",
+        "tv_lcc9": "耐荷性能 限界状態3(変動作用)[9]",
+        "tv_lcc10": "耐荷性能 限界状態3(変動作用)[10]",
+        "tv_lcc11": "耐荷性能 限界状態3(偶発作用)[11]",
+        "tv_lcc12": "耐荷性能 限界状態3(偶発作用)[12]"
     },
     "members" :{
         "section_sh":"断面形状",
@@ -291,15 +318,15 @@
         "p_name":"算出点名",
         "top":"上側",
         "under":"下側",
-        "Top":"上　　 側",
-        "Under":"下　　 側",
+        "Top":"上   側",
+        "Under":"下   側",
         "check_bend":"曲げモーメントの照査",
-        "d_s_stress":"耐久性、使用性　縁引張応力度検討用",
-        "d_s_pa":"耐久性、使用性　永久作用",
-        "d_stress":"耐久性　縁引張応力度検討用",
-        "d_pa":"耐久性　永久作用",
-        "u_stress":"使用性　縁引張応力度検討用",
-        "u_pa":"使用性　永久作用",
+        "d_s_stress":"耐久性、使用性 縁引張応力度検討用",
+        "d_s_pa":"耐久性、使用性 永久作用",
+        "d_stress":"耐久性 縁引張応力度検討用",
+        "d_pa":"耐久性 永久作用",
+        "u_stress":"使用性 縁引張応力度検討用",
+        "u_pa":"使用性 永久作用",
         "safe_d":"安全性（破壊）",
         "safe_max":"安全性（疲労破壊）最大応力",
         "safe_min":"安全性（疲労破壊）最小応力",
@@ -307,10 +334,10 @@
         "r_ex":"復旧性（地震時以外）",
         "r_at":"復旧性（地震時）",
         "check_shear":"せん断力に対する照査",
-        "d_crack":"耐久性　ひび割れ照査必要性の検討用",
-        "d_fa":"耐久性　変動作用",
+        "d_crack":"耐久性 ひび割れ照査必要性の検討用",
+        "d_fa":"耐久性 変動作用",
         "check_torsion":"ねじりモーメントに対する照査",
-        "d_torsion":"耐久性　ねじりひび割れ照査必要性の検討用"
+        "d_torsion":"耐久性 ねじりひび割れ照査必要性の検討用"
     },
     "result-viewer":{
         "section_list":"断面力一覧表",
@@ -373,7 +400,7 @@
         "bend_comp_stress":"コンクリートの曲げ圧縮応力度",
         "pl":"永久荷重",
         "rb_ten_stress":"鉄筋引張応力度",
-        "safe":"安　全　度",
+        "safe":"安 全 度",
         "safe_cw":"安全性ひび割れ幅",
         "ae_cw":"外観ひび割れ幅",
         "shear_without":"補強鋼材を用いないせん断耐力",
@@ -418,7 +445,7 @@
         "vrfy_rslt":"照査結果",
         "thk":"厚さ",
         "stirrup":"スターラップ",
-        "rb_corr":"鉄筋補正　αr",
+        "rb_corr":"鉄筋補正 αr",
         "time":"(回)",
         "rb_r1":"鉄筋加工補正 r1",
         "rb_r2":"鉄筋加工補正 r2",
@@ -478,7 +505,7 @@
         "safe_d_torsion_vrfy_rslt":"安全性（破壊）ねじりモーメントの照査結果"
     },
     "result-serviceability-moment":{
-        "d_bend_vrfy_rslt":"耐久性　曲げひび割れの照査結果"
+        "d_bend_vrfy_rslt":"耐久性 曲げひび割れの照査結果"
     },
     "result-serviceability-shear-force":{
         "d_shear_vrfy_rslt":"耐久性 せん断ひび割れの照査結果"
