--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -100,6 +100,33 @@
         "partial_coefficient_method":"partial coefficient method",
         "allowable_stress_method":"allowable stress method"
     },
+    "basic-information-road":{
+        "bs_dcp_of_is": "Durability Corrosion protection of internal steel [1]",
+        "bs_durability_fatigue": "Durability Fatigue of concrete members [13]",
+        "bs_lcc1": "Load carrying capacity Limit states 1, 3 (permanent action)[1]",
+        "bs_lcc2_8": "Load carrying capacity Limit states 1, 3 (variable action) [2-8]",
+        "bs_lcc9": "Load carrying capacity Limit states 1, 3 (variable action)[9]",
+        "bs_lcc10": "Load carrying capacity Limit states 1, 3 (variable action)[10]",
+        "bs_lcc11": "Load carrying capacity Limit states 1, 3 (accidental action) [11]",
+        "bs_lcc12": "Load carrying capacity Limit states 1, 3 (accidental action) [12]",
+        "bs_min_rebar_amount": "Minimum rebar amount[1-10]",
+        "sfv_dcp_of_is": "Durability Corrosion protection of internal steel [1]",
+        "sfv_durability_fatigue": "Durability Fatigue of concrete members [13]",
+        "sfv_lcc1": "Load carrying capacity Limit states 1, 3 (permanent action)[1]",
+        "sfv_lcc2_8": "Load carrying capacity Limit states 1, 3 (variable action) [2-8]",
+        "sfv_lcc9": "Load carrying capacity Limit states 1, 3 (variable action)[9]",
+        "sfv_lcc10": "Load carrying capacity Limit states 1, 3 (variable action)[10]",
+        "sfv_lcc11": "Load carrying capacity Limit states 1, 3 (accidental action) [11]",
+        "sfv_lcc12": "Load carrying capacity Limit states 1, 3 (accidental action) [12]",
+        "tv_dcp_of_is": "Durability Corrosion protection of internal steel [1]",
+        "tv_durability_fatigue": "Durability Fatigue of concrete members [13]",
+        "tv_lcc1": "Load carrying capacity Limit states 1, 3 (permanent action)[1]",
+        "tv_lcc2_8": "Load carrying capacity Limit states 1, 3 (variable action) [2-8]",
+        "tv_lcc9": "Load carrying capacity Limit states 1, 3 (variable action)[9]",
+        "tv_lcc10": "Load carrying capacity Limit states 1, 3 (variable action)[10]",
+        "tv_lcc11": "Load carrying capacity Limit states 1, 3 (accidental action) [11]",
+        "tv_lcc12": "Load carrying capacity Limit states 1, 3 (accidental action) [12]"
+    },
     "members" :{
         "section_sh":"Cross-sectional shape",
         "No":"No",
