get data component type

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -250,6 +250,9 @@
         "com_type":"Component Type",
         "other_con":"Other conditions",
         "base_stan":"Base Standard",
+        "ge_pa":"General parts",
+        "fla_for_flo_sla":"Flange for floor slab",
+        "sub":"Substructure",
         "rsb_con":"Reinforcing bar / Concrete",
         "rebar_ax":"Axial rebar",
         "rebar_la":"Lateral rebar",
