get data sesismic

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -271,7 +271,11 @@
         "c_mta":"Concrete material strength",
         "si": "Situation",
         "pl_ex": "Plasticization Expect",
-        "lv_e": "Level 2 earthquake motionType"
+        "lv_e": "Level 2 earthquake motionType",
+        "var_st": "Variable Action Control Status",
+        "acc_st": "Accidental Action Control Status",
+        "fck":"Design standard strength of concrete fck(N/mm2)",
+        "max_ca":"Maximum dimensions of coarse aggregate (mm)"
     },
     "safety-factors-material-strengths":{
         "rsb_con":"Reinforcing bar / Concrete",
