--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -98,7 +98,8 @@
         "Mud":"せん断耐力におけるβn算定時の Mud は軸力を考慮しない",
         "limit_design_method":"限界設計法",
         "partial_coefficient_method":"部分係数法",
-        "allowable_stress_method":"許容応力度法"
+        "allowable_stress_method":"許容応力度法",
+        "adopt":"円形断面のせん断耐力が小さくなるような鉄筋配置を採用"
     },
     "basic-information-road":{
         "bs_dcp_of_is": "耐久性 内部鋼材の防食[1]",
