add image detail to basic information page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -99,7 +99,8 @@
         "limit_design_method":"limit design method",
         "partial_coefficient_method":"partial coefficient method",
         "allowable_stress_method":"allowable stress method",
-        "adopt":"Adopt a rebar placement method that reduces shear capacity in a circular section"
+        "adopt":"Adopt a rebar placement method that reduces shear capacity in a circular section",
+        "note_img": "※ The numbers in [] correspond to the numbers in the table below (combination of actions)."
     },
     "basic-information-road":{
         "bs_dcp_of_is": "Durability Corrosion protection of internal steel [1]",
