fix translate material strength

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -252,6 +252,41 @@
         "hoop":"帯筋",
         "fold":"折曲げ"
     },
+    "material-strength-verifiaction-condition":{
+        "com_type":"Component Type 1",
+        "other_con":"Other conditions 1",
+        "base_stan":"Base Standard 1",
+        "ge_pa":"General parts 1", 
+        "fla_for_flo_sla":"Flange for floor slab 1",
+        "sub":"Substructure 1",
+        "sep":"The upper limit of the characteristic value Sc of shear force that concrete can bear is not taken into account 1",
+        "rsb_con":"Reinforcing bar / Concrete 1",
+        "rebar_ax":"Axial rebar 1",
+        "rebar_la":"Lateral rebar 1",
+        "stirrup":"Stirrup 1",
+        "γi":"Coefficient γi 1",
+        "ys":"Yield strength 1",
+        "d25":"D25 or less 1",
+        "d29":"D29 and above 1",
+        "dts":"Design tensile strength 1",
+        "r_mta":"Reinforcing bar material strength 1",
+        "pile":"Pile construction conditions 1",
+        "method":"Construction method 1",
+        "ρc":"Construction correction factor ρc 1",
+        "vcd":"Design of bar members without shear reinforced steel Shear strength Vcd reduction coefficient 1",
+        "cs":"Compressive strength 1",
+        "as":"Adhesion strength 1",
+        "young":"Young's modulus 1",
+        "sei_ver": "Seismic Verification Conditions 1",
+        "c_mta":"Concrete material strength 1",
+        "si": "Situation 1",
+        "pl_ex": "Plasticization Expect 1",
+        "lv_e": "Level 2 earthquake motionType 1",
+        "var_st": "Variable Action Control Status 1",
+        "acc_st": "Accidental Action Control Status 1",
+        "fck":"Design standard strength of concrete fck(N/mm2) 1",
+        "max_ca":"Maximum dimensions of coarse aggregate (mm) 1"
+    },
     "safety-factors-material-strengths":{
         "rsb_con":"鉄筋・コンクリート",
         "safe":"安全係数",
