check save data

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -253,13 +253,13 @@
         "fold":"折曲げ"
     },
     "material-strength-verifiaction-condition":{
-        "com_type":"Component Type",
-        "other_con":"Other conditions",
-        "base_stan":"Base Standard",
-        "ge_pa":"General parts",
-        "fla_for_flo_sla":"Flange for floor slab",
-        "sub":"Substructure",
-        "sep":"The upper limit of the characteristic value Sc of shear force that concrete can bear is not taken into account",
+        "com_type":"部材種別",
+        "other_con":"その他条件",
+        "base_stan":"ベース基準",
+        "ge_pa":"一般部材",
+        "fla_for_flo_sla":"床版兼用フランジ",
+        "sub":"下部構造",
+        "sep":"コンクリートが負担できるせん断力の特性値Scの上限を考慮しないt",
         "rsb_con":"鉄筋・コンクリート",
         "rebar_ax":"軸方向鉄筋",
         "rebar_la":"側方向鉄筋",
@@ -269,13 +269,13 @@
         "d29":"D29以上",
         "dts":"設計引張強度",
         "r_mta":"鉄筋材料強度",   
-        "sei_ver": "Seismic Verification Conditions",
+        "sei_ver": "地震時照査条件",
         "c_mta":"コンクリート材料強度",
-        "si": "Situation",
-        "pl_ex": "Plasticization Expect",
-        "lv_e": "Level 2 earthquake motionType",
-        "var_st": "Variable Action Control Status",
-        "acc_st": "Accidental Action Control Status",
+        "si": "状況",
+        "pl_ex": "塑性化を期待する",
+        "lv_e": "レベル2地震動タイプ",
+        "var_st": "変動作用支配状況",
+        "acc_st": "偶発作用支配状況",
         "fck":"コンクリートの設計基準強度 fck(N/mm2)",
         "max_ca":"粗骨材の最大寸法 (mm)"
     },
