add text message

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -277,7 +277,8 @@
         "var_st": "Variable Action Control Status",
         "acc_st": "Accidental Action Control Status",
         "fck":"Design standard strength of concrete fck(N/mm2)",
-        "max_ca":"Maximum dimensions of coarse aggregate (mm)"
+        "max_ca":"Maximum dimensions of coarse aggregate (mm)",
+        "text_mes":"If 'Design standard strength of concrete fck>30', not considered"
     },
     "safety-factors-material-strengths":{
         "rsb_con":"Reinforcing bar / Concrete",
