--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -278,7 +278,9 @@
         "acc_st": "偶発作用支配状況",
         "fck":"コンクリートの設計基準強度 fck(N/mm2)",
         "max_ca":"粗骨材の最大寸法 (mm)",
-        "text_mes":"コンクリートの設計基準強度がfck>30の場合は考慮しない"
+        "text_mes":"コンクリートの設計基準強度がfck>30の場合は考慮しない",
+        "co":"コーベル",
+        "do_not":"コンクリートが負担できるせん断に軸方向力による効果を期待しない"
     },
     "safety-factors-material-strengths":{
         "rsb_con":"鉄筋・コンクリート",
