change material strength

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -260,19 +260,19 @@
         "fla_for_flo_sla":"Flange for floor slab",
         "sub":"Substructure",
         "sep":"The upper limit of the characteristic value Sc of shear force that concrete can bear is not taken into account",
-        "rsb_con":"Reinforcing bar / Concrete",
+        "rsb_con":"Reinforcing bar ・ Concrete",
         "rebar_ax":"Axial rebar",
         "rebar_la":"Lateral rebar",
         "stirrup":"Stirrup",     
-        "ys":"Yield strength",
+        "ys":"Yield strength(N/mm2)",
         "d25":"D25 or less",
         "d29":"D29 and above",
-        "dts":"Design tensile strength",
+        "dts":"Design tensile strength(N/mm2)",
         "r_mta":"Reinforcing bar material strength",   
         "sei_ver": "Seismic Verification Conditions",
         "c_mta":"Concrete material strength",
         "si": "Situation",
-        "pl_ex": "Plasticization Expect",
+        "pl_ex": "Plasticization・ Expect",
         "lv_e": "Level 2 earthquake motionType",
         "var_st": "Variable Action Control Status",
         "acc_st": "Accidental Action Control Status",
