--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -264,15 +264,15 @@
         "rebar_ax":"軸方向鉄筋",
         "rebar_la":"側方向鉄筋",
         "stirrup":"スターラップ",     
-        "ys":"降伏強度",
+        "ys":"降伏強度(N/mm2)",
         "d25":"D25以下",
         "d29":"D29以上",
-        "dts":"設計引張強度",
+        "dts":"設計引張強度(N/mm2)",
         "r_mta":"鉄筋材料強度",   
         "sei_ver": "地震時照査条件",
         "c_mta":"コンクリート材料強度",
         "si": "状況",
-        "pl_ex": "塑性化を期待する",
+        "pl_ex": "塑性化を・期待 する",
         "lv_e": "レベル2地震動タイプ",
         "var_st": "変動作用支配状況",
         "acc_st": "偶発作用支配状況",
