i18: Revert title, change to branch 361

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -64,8 +64,8 @@
         "road":"Road",
         "Pilipinas": "Railway for pilipinas",
         "japan_civil":"Japan Society of Civil Engineers",
-        "d_stress":"Durability and Usability For studying edge stress",
-        "pl_d":"Durability and Usability Permanent action",
+        "d_stress":"Durability For studying edge stress",
+        "pl_d":"Durability (permanent load)",
         "safe_limit":"Safety (fatigue fracture) Fatigue limit",
         "safe_pa":"Safety (fatigue destruction) Permanent action",
         "safe_pv":"Safety (fatigue fracture) Permanent + variable",
