--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -61,7 +61,7 @@
         "dc":"Design condition",
         "sre_cross":"Stress used for cross-section inspection",
         "rail":"Railway",
-        "road":"Road",
+        "road":"Road 'trial'",
         "Pilipinas": "Railway for pilipinas",
         "japan_civil":"Japan Society of Civil Engineers",
         "d_stress":"Durability For studying edge stress",
