add new UI for basic-basic-information with cross-sectional-force

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -100,7 +100,8 @@
         "partial_coefficient_method":"partial coefficient method",
         "allowable_stress_method":"allowable stress method",
         "adopt":"Adopt a rebar placement method that reduces shear capacity in a circular section",
-        "note_img": "※ The numbers in [] correspond to the numbers in the table below (combination of actions)."
+        "note_img": "※ The numbers in [] correspond to the numbers in the table below (combination of actions).",
+        "noti_section_force":"No 'Basic Data' input is required for 'Cross Sectional Force' mode."
     },
     "basic-information-road":{
         "bs_dcp_of_is": "Durability Corrosion protection of internal steel [1]",
