--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -100,7 +100,8 @@
         "partial_coefficient_method":"部分係数法",
         "allowable_stress_method":"許容応力度法",
         "adopt":"円形断面のせん断耐力が小さくなるような鉄筋配置を採用",
-        "note_img": "※[]内の数値は下表（作用の組合せ）の番号に対応"
+        "note_img": "※[]内の数値は下表（作用の組合せ）の番号に対応",
+        "noti_section_force":"「断面力」モードでは「基本データ」の入力は不要です"
     },
     "basic-information-road":{
         "bs_dcp_of_is": "耐久性 内部鋼材の防食[1]",
