誤字を修正

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -259,7 +259,7 @@
         "ge_pa":"一般部材",
         "fla_for_flo_sla":"床版兼用フランジ",
         "sub":"下部構造",
-        "sep":"コンクリートが負担できるせん断力の特性値Scの上限を考慮しないt",
+        "sep":"コンクリートが負担できるせん断力の特性値Scの上限を考慮しない",
         "rsb_con":"鉄筋・コンクリート",
         "rebar_ax":"軸方向鉄筋",
         "rebar_la":"側方向鉄筋",
