誤字修正、体裁修正

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -272,7 +272,7 @@
         "sei_ver": "地震時照査条件",
         "c_mta":"コンクリート材料強度",
         "si": "状況",
-        "pl_ex": "塑性化を・期待 する",
+        "pl_ex": "塑性化を期待する",
         "lv_e": "レベル2地震動タイプ",
         "var_st": "変動作用支配状況",
         "acc_st": "偶発作用支配状況",
